# crm-helper

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
src/: CLAUDE.md  config.py  date_distributor.py  logger.py
src/automation/: CLAUDE.md  activities_page.py  auth.py  browser.py  user_processor.py
src/crm_helper/: cli.py  config.py  date_distributor.py  gui.py  main.py
src/crm_helper/automation/: activities_page.py  auth.py  browser.py  user_processor.py
src/crm_helper/models/: user.py
src/models/: user.py
