[project]
name = "crm-helper"
version = "0.1.0"
description = "CRM automation tool for processing activities using Playwright"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "playwright>=1.41.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]
